# mcp_zulip

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/: mcp.json.example
src/mcp_zulip/: __init__.py  __main__.py  cli.py  config.py  register_tools.py  resource_text.py  server.py  service.py  util.py
src/mcp_zulip/resources/: __init__.py  api_guide.md  cheatsheet.md
tests/: test_cli_init_cursor.py  test_init_cursor_git_root.py  test_resources.py  test_service.py
